--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,55 @@
 body {
 	font-family: 'Titillium Web', Verdana, sans-serif;
-	padding-left: 150px;
+	padding-left: 7%;
     padding-right: 150px;
 	color: #000000;
 }
 h1 {
-	text-decoration: underline;
+	/*text-decoration: underline;*/
 	font-weight: bold;
 }
 h2 {
 	padding-left: 10px;
-  margin-top: 6px;
-  margin-left: 5px;
-  margin-bottom: 6px;
+	margin-top: 6px;
+	margin-left: 5px;
+	margin-bottom: 6px;
 }
 ul {
 	list-style-type: none;
-  margin-top: 5px;
-  margin-bottom: 10px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 }
 footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 150px;
-    /*background-color: #dbdbdb;*/
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 7%;
+    background-color: #dbdbdb;
     text-align: left + 20px;
+}
+.navbar {
+	font-family: 'Titillium Web', Verdana, sans-serif;
+	padding-left: 7%;
+    padding-right: 150px;
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+.navbar li {
+    float: left;
+}
+.navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar li a:hover {
+    background-color: #111;
 }
